Stop child elements from collapsing horizontally

--- a/.build/assets/styles/___components/_wp-site-blocks.scss
+++ b/.build/assets/styles/___components/_wp-site-blocks.scss
@@ -3,6 +3,11 @@
     flex-direction: column;
     min-height: calc(100 * var(--vh));
 
+    > * {
+        // Stop child elements from collapsing horizontally
+        width: 100%;
+    }
+
     .admin-bar & {
         min-height: calc(100 * var(--vh) - var(--admin-bar-height));
     }
